<project xmlns="http://maven.apache.org/POM/4.0.0"
  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>com.francelabs.datafari</groupId>
  <artifactId>datafari-ce</artifactId>
  <!-- Main POM of datafari -->
  <packaging>pom</packaging>
  <version>6.3-dev-Community</version>
  <name>Datafari Enterprise Search CE - Parent POM</name>
  <properties>
    <adminui.version>1.0</adminui.version>
    <adminui.md5>ae9ca787e5067f3bedb1f2cdad4408b0</adminui.md5>
    <bcpkix-jdk15on.version>1.70</bcpkix-jdk15on.version>
    <bcprov-jdk15on.version>1.70</bcprov-jdk15on.version>
    <cassandra.version>trunk</cassandra.version>
    <cassandra.sha512>b94d22c231dfbe124db094ff784146016fabfe0da0ec5ebcce7302c6f2bd78d2c568769a0c134bb1d73370c208b04d1543dc7cc11a83e5e1b789731da85ac3bf</cassandra.sha512>
    <cassandra.driver.version>4.19.0</cassandra.driver.version>
    <datafari.version>6.3-dev-Community</datafari.version>
    <datafariui.version>1.1.3</datafariui.version>
    <datafariui.md5>ce989a53e68816b5ad0a22e687b0e63d</datafariui.md5>
    <guava.version>26.0-jre</guava.version>
    <httpclient.version>4.5.13</httpclient.version>
    <java.version>21</java.version>
    <jena-libs.version>4.4.0</jena-libs.version>
    <json.simple.version>1.1.1</json.simple.version>
    <jackson.version>2.13.3</jackson.version>
    <jackson-databind.version>2.13.4.1</jackson-databind.version>
    <keycloak.version>22.0.1</keycloak.version>
    <log4j.version>2.17.2</log4j.version>
    <logstash.version>8.12.1</logstash.version>
    <logstash.sha512>df516962f9518a20809a92655605766607f2177287f7e296e2de40e4970680d3004e7e5cbad57b15add1271f5c7a0c166a950b0fd995eaf57417d8efb16f6ed8</logstash.sha512>
    <mcf-solr-plugin.version>9.x-plugin-2.2</mcf-solr-plugin.version>
    <mcf-solr-plugin.sha512>38261a93265c1697db2742947ec72dfdfbb31f4dcab7a343484b06bb57416a668c750a98d5130fadf97464587a09677bb927e2623b862e618e45a3922b67d20b</mcf-solr-plugin.sha512>
    <mssql-jdbc.version>10.2.1.jre11</mssql-jdbc.version>
    <postgresql.version>42.7.2</postgresql.version>
    <ojdbc.version>19.15.0.0.1</ojdbc.version>
    <postgres.version>42.7.2</postgres.version>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
   <solr.sha512>08888ea626b9fa617438b97f9f8d552acfbd087fc9fd248e7495627716decca5e2e8d55bedf0e1f2484c838295c2abd68debb002d1ae36965eb99753320459f4</solr.sha512>
   <solr.version>9.8.1</solr.version>
     <spring.boot.version>2.7.14</spring.boot.version>
    <spring.data.cassandra.version>3.4.15</spring.data.cassandra.version>
    <spring.security.version>5.8.5</spring.security.version>
    <spring.security.kerberos.version>1.0.1.RELEASE</spring.security.kerberos.version>
    <spring.security.saml2.core.version>1.0.10.RELEASE</spring.security.saml2.core.version>
    <spring.version>5.3.29</spring.version>
    <spring.oauth2.version>2.5.2.RELEASE</spring.oauth2.version>
    <tika.version>2.9.4</tika.version>
    <tika-server.sha512>7498f6e87cc331fa14a994594f941d8935d6bf7b11407ea2ff893b1acd8f19c38dca45f1e651a736eb7ba963ab1801833e56e02096d82d26c8650c48ffe1c2ce</tika-server.sha512>
    <tika-server-commit-number>5c0793e2c</tika-server-commit-number>
    <tomcat.version>9.0.105</tomcat.version>
    <slf4j.version>1.7.36</slf4j.version>
    <xmlsec.version>2.3.0</xmlsec.version>
    <langchain4j.version>1.3.0</langchain4j.version>
<mcf.version>2.28</mcf.version>
<mcf.sha512>73b8053e333d63540113cc247e1ac7679b91eb07d68f4cb89ae8ffdfa6978fb24bd346bcb0cbc45ae823c8accd7bedd0994b3e7683442a614b839a7ab3616def</mcf.sha512>
<zookeeper.version>3.9.2</zookeeper.version>
 <zookeeper.sha512>2b5ae02d618a27ca8cd54924855d5344263b7d9dee760181f9d66bafa9230324d2ad31786895f0654c969dc38d4a3d0077f74cc376b58b5fa2fb94beb1ab445f</zookeeper.sha512>
  </properties>
  
  <!-- The order of modules execution is important  -->
  <modules>
    <!-- Child module datafari-core added to install project dependencies in Maven 
      repo -->

    <module>datafari-solr</module>
    <module>datafari-mcf</module>
    <module>datafari-mcf-connectors-dependencies</module>
    <module>datafari-core</module>
    <module>datafari-webapp</module>
    <module>datafari-zookeeper</module>
    <module>datafari-jena</module>
    <module>datafari-cassandra</module>
    <module>datafari-tomcat</module>
    <module>datafari-analytic-stack</module>
    <module>datafari-updateprocessor</module>
    <module>datafari-docfilter-connector</module>
    <module>datafari-emptier-connector</module>
    <module>datafari-metadatacleaner-connector</module>
    <module>datafari-spacy-fastapi-connector</module>
    <module>datafari-tika-server</module>
    <module>datafari-handler</module>
    <module>datafari-mcf-scripts</module>
    <module>datafari-web-connector</module>
    <module>datafari-share-connector</module>
    <module>datafari-ui</module>
    <module>datafari-adminui</module>
    <module>datafari-git-plugin</module>
    <module>datafari-regex-entity-connector</module>
    <module>datafari-llm-connector</module>
    <module>datafari-binary-connector</module>
    <module>datafari-active-directory-connector</module>
    <module>datafari-solr-atomic-update</module>
    <module>datafari-confluence-v6-connector</module>
    <module>datafari-solr-connector</module>
    <module>datafari-jdbc-connector</module>
    <module>datafari-jira-connector</module>
  </modules>
  <build>
    <pluginManagement>
      <plugins>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-enforcer-plugin</artifactId>
          <version>3.0.0-M2</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-compiler-plugin</artifactId>
          <version>3.8.1</version>
          <configuration>
            <release>21</release>
          </configuration>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-dependency-plugin</artifactId>
          <version>3.1.1</version>
        </plugin>
        <plugin>
          <groupId>com.googlecode.maven-download-plugin</groupId>
          <artifactId>download-maven-plugin</artifactId>
          <version>1.4.2</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-resources-plugin</artifactId>
          <version>3.1.0</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-surefire-plugin</artifactId>
          <version>3.0.0-M3</version>
          <configuration>
            <argLine> --illegal-access=permit 
            </argLine>
          </configuration>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-install-plugin</artifactId>
          <version>3.0.0-M1</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-jar-plugin</artifactId>
          <version>3.1.2</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-shade-plugin</artifactId>
          <version>3.2.1</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-war-plugin</artifactId>
          <version>3.2.3</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-clean-plugin</artifactId>
          <version>3.1.0</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-assembly-plugin</artifactId>
          <version>3.1.1</version>
        </plugin>
        <plugin>
          <groupId>pl.project13.maven</groupId>
          <artifactId>git-commit-id-plugin</artifactId>
          <version>3.0.0</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-antrun-plugin</artifactId>
          <version>1.8</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-deploy-plugin</artifactId>
          <version>3.0.0-M1</version>
        </plugin>
      </plugins>
    </pluginManagement>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-enforcer-plugin</artifactId>
        <executions>
          <execution>
            <id>enforce-maven</id>
            <goals>
              <goal>enforce</goal>
            </goals>
            <configuration>
              <rules>
                <requireMavenVersion>
                  <version>3.0.5</version>
                </requireMavenVersion>
              </rules>
            </configuration>
          </execution>
        </executions>
      </plugin>
    </plugins>
  </build>
  <description>
Datafari is the ideal product for those who want to search through their data, while using advanced open source technologies. Datafari combines Apache ManifoldCF and Apache Solr, to allow its users to search through many different and diverse data sources: their file shares, their cloud shares (dropbox, google drive???), their databases, but also their emails and many more.
    </description>
  <url>http://www.datafari.com/en/</url>
  <inceptionYear>2011</inceptionYear>
  <licenses>
    <license>
      <name>Apache License, Version 2.0</name>
      <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
      <distribution>repo</distribution>
    </license>
  </licenses>
  <organization>
    <name>France Labs - Search Experts</name>
    <url>http://www.francelabs.com/en/</url>
  </organization>
  <issueManagement>
    <system>JIRA</system>
    <url>https://datafari.atlassian.net/secure/Dashboard.jspa</url>
  </issueManagement>
  <scm>
    <connection>scm:git:https://github.com/francelabs/datafari.git</connection>
    <tag>HEAD</tag>
    <url>https://github.com/francelabs/datafari</url>
  </scm>
</project>
